SDKs/microsoft.com/cognitiveservices-Training/1.2/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
    
req = operations.CreateImagesFromDataRequest(
    path_params=operations.CreateImagesFromDataPathParams(
        project_id="reiciendis",
    ),
    query_params=operations.CreateImagesFromDataQueryParams(
        tag_ids=[
            "suscipit",
        ],
    ),
    headers=operations.CreateImagesFromDataHeaders(
        training_key="dolor",
    ),
    request=operations.CreateImagesFromDataRequestBody(
        image_data=operations.CreateImagesFromDataRequestBodyImageData(
            content="quia".encode(),
            image_data="rerum",
        ),
    ),
)
    
res = s.sdk.create_images_from_data(req)

if res.image_create_summary is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `create_images_from_data` - Add the provided images to the set of training images
* `create_project` - Create a project
* `create_tag` - Create a tag for the project
* `delete_image_tags` - Remove a set of tags from a set of images
* `delete_images` - Delete images from the set of training images
* `delete_iteration` - Delete a specific iteration of a project
* `delete_prediction` - Delete a set of predicted images and their associated prediction results
* `delete_project` - Delete a specific project
* `delete_tag` - Delete a tag from the project
* `export_iteration` - Export a trained iteration
* `get_account_info` - Get basic information about your account
* `get_domain` - Get information about a specific domain
* `get_domains` - Get a list of the available domains
* `get_exports` - Get the list of exports for a specific iteration
* `get_iteration` - Get a specific iteration
* `get_iteration_performance` - Get detailed performance information about a trained iteration
* `get_iterations` - Get iterations for the project
* `get_project` - Get a specific project
* `get_projects` - Get your projects
* `get_tag` - Get information about a specific tag
* `get_tagged_images` - Get tagged images for a given project iteration
* `get_tags` - Get the tags for a given project and iteration
* `get_untagged_images` - Get untagged images for a given project iteration
* `quick_test_image` - Quick test an image
* `quick_test_image_url` - Quick test an image url
* `train_project` - Queues project for training
* `update_iteration` - Update a specific iteration
* `update_project` - Update a specific project
* `update_tag` - Update a tag

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
